--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1030,6 +1030,9 @@ select{
 .rounded-full{
   border-radius: 9999px;
 }
+.rounded-sm{
+  border-radius: 0.125rem;
+}
 .rounded-none{
   border-radius: 0px;
 }
@@ -1512,6 +1515,10 @@ select{
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -2082,11 +2089,11 @@ select{
   .lg\:top-0{
     top: 0px;
   }
-  .lg\:col-span-4{
-    grid-column: span 4 / span 4;
-  }
   .lg\:col-span-1{
     grid-column: span 1 / span 1;
+  }
+  .lg\:col-span-4{
+    grid-column: span 4 / span 4;
   }
   .lg\:m-12{
     margin: 3rem;
