--- a/public/css/app.css
+++ b/public/css/app.css
@@ -510,6 +510,34 @@ select{
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.container{
+  width: 100%;
+}
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
 .pointer-events-none{
   pointer-events: none;
 }
@@ -632,11 +660,26 @@ select{
 .-mt-px{
   margin-top: -1px;
 }
-.mt-12{
-  margin-top: 3rem;
+.ml-auto{
+  margin-left: auto;
+}
+.mt-1{
+  margin-top: 0.25rem;
+}
+.mt-3{
+  margin-top: 0.75rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
+}
+.mr-auto{
+  margin-right: auto;
 }
 .mb-2{
   margin-bottom: 0.5rem;
+}
+.mt-12{
+  margin-top: 3rem;
 }
 .ml-0{
   margin-left: 0px;
@@ -656,21 +699,6 @@ select{
 .mb-24{
   margin-bottom: 6rem;
 }
-.ml-auto{
-  margin-left: auto;
-}
-.mt-1{
-  margin-top: 0.25rem;
-}
-.mt-3{
-  margin-top: 0.75rem;
-}
-.mt-10{
-  margin-top: 2.5rem;
-}
-.mr-auto{
-  margin-right: auto;
-}
 .-mr-0\.5{
   margin-right: -0.125rem;
 }
@@ -683,9 +711,6 @@ select{
 .mt-6{
   margin-top: 1.5rem;
 }
-.-ml-1{
-  margin-left: -0.25rem;
-}
 .ml-16{
   margin-left: 4rem;
 }
@@ -697,6 +722,9 @@ select{
 }
 .mb-0{
   margin-bottom: 0px;
+}
+.-ml-1{
+  margin-left: -0.25rem;
 }
 .mb-4{
   margin-bottom: 1rem;
@@ -764,14 +792,11 @@ select{
 .h-16{
   height: 4rem;
 }
+.h-12{
+  height: 3rem;
+}
 .h-auto{
   height: auto;
-}
-.h-full{
-  height: 100%;
-}
-.h-10{
-  height: 2.5rem;
 }
 .h-9{
   height: 2.25rem;
@@ -787,6 +812,12 @@ select{
 }
 .h-\[160px\]{
   height: 160px;
+}
+.h-full{
+  height: 100%;
+}
+.h-10{
+  height: 2.5rem;
 }
 .h-\[38px\]{
   height: 38px;
@@ -806,26 +837,20 @@ select{
 .w-auto{
   width: auto;
 }
+.w-2\/3{
+  width: 66.666667%;
+}
 .w-full{
   width: 100%;
+}
+.w-1\/3{
+  width: 33.333333%;
 }
 .w-3\/6{
   width: 50%;
 }
 .w-64{
   width: 16rem;
-}
-.w-10{
-  width: 2.5rem;
-}
-.w-1\/2{
-  width: 50%;
-}
-.w-1\/3{
-  width: 33.333333%;
-}
-.w-2\/3{
-  width: 66.666667%;
 }
 .w-48{
   width: 12rem;
@@ -836,8 +861,14 @@ select{
 .w-6{
   width: 1.5rem;
 }
+.w-1\/2{
+  width: 50%;
+}
 .w-20{
   width: 5rem;
+}
+.w-10{
+  width: 2.5rem;
 }
 .w-16{
   width: 4rem;
@@ -1082,14 +1113,14 @@ select{
 .border-r{
   border-right-width: 1px;
 }
+.border-b{
+  border-bottom-width: 1px;
+}
 .border-t-8{
   border-top-width: 8px;
 }
 .border-b-2{
   border-bottom-width: 2px;
-}
-.border-b{
-  border-bottom-width: 1px;
 }
 .border-l-4{
   border-left-width: 4px;
@@ -1149,6 +1180,10 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1156,10 +1191,6 @@ select{
 .bg-gray-700{
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 .bg-indigo-500{
   --tw-bg-opacity: 1;
@@ -1180,6 +1211,18 @@ select{
 .bg-indigo-600{
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+.bg-teal-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 246 228 / var(--tw-bg-opacity));
+}
+.bg-amber-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 230 138 / var(--tw-bg-opacity));
+}
+.bg-green-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
 }
 .bg-red-200{
   --tw-bg-opacity: 1;
@@ -1227,13 +1270,13 @@ select{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .px-3{
   padding-left: 0.75rem;
@@ -1242,6 +1285,10 @@ select{
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 .px-5{
   padding-left: 1.25rem;
@@ -1258,10 +1305,6 @@ select{
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 .py-8{
   padding-top: 2rem;
@@ -1365,17 +1408,17 @@ select{
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
 }
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-4xl{
   font-size: 2.25rem;
@@ -1394,11 +1437,11 @@ select{
 .font-bold{
   font-weight: 700;
 }
-.font-extrabold{
-  font-weight: 800;
-}
 .font-light{
   font-weight: 300;
+}
+.font-extrabold{
+  font-weight: 800;
 }
 .font-normal{
   font-weight: 400;
@@ -1475,6 +1518,10 @@ select{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
+.text-green-500{
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
+}
 .text-green-700{
   --tw-text-opacity: 1;
   color: rgb(21 128 61 / var(--tw-text-opacity));
@@ -1486,10 +1533,6 @@ select{
 .text-black{
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-.text-green-500{
-  --tw-text-opacity: 1;
-  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 .text-indigo-600{
   --tw-text-opacity: 1;
@@ -1526,6 +1569,18 @@ select{
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-teal-900{
+  --tw-text-opacity: 1;
+  color: rgb(19 78 74 / var(--tw-text-opacity));
+}
+.text-amber-900{
+  --tw-text-opacity: 1;
+  color: rgb(120 53 15 / var(--tw-text-opacity));
+}
+.text-green-900{
+  --tw-text-opacity: 1;
+  color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 .text-red-900{
   --tw-text-opacity: 1;
@@ -1779,6 +1834,10 @@ select{
   margin-left: 4rem;
 }
 @media (prefers-color-scheme: dark){
+  .dark\:border-gray-700{
+    --tw-border-opacity: 1;
+    border-color: rgb(55 65 81 / var(--tw-border-opacity));
+  }
   .dark\:border-indigo-800{
     --tw-border-opacity: 1;
     border-color: rgb(55 48 163 / var(--tw-border-opacity));
@@ -1786,6 +1845,22 @@ select{
   .dark\:bg-gray-900{
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+  .dark\:bg-gray-800{
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+  .dark\:text-gray-500{
+    --tw-text-opacity: 1;
+    color: rgb(107 114 128 / var(--tw-text-opacity));
+  }
+  .dark\:text-white{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+  .dark\:text-gray-400{
+    --tw-text-opacity: 1;
+    color: rgb(156 163 175 / var(--tw-text-opacity));
   }
 }
 @media print{
@@ -1924,6 +1999,9 @@ select{
     margin-left: -1.5rem;
     margin-right: -1.5rem;
   }
+  .sm\:ml-0{
+    margin-left: 0px;
+  }
   .sm\:ml-10{
     margin-left: 2.5rem;
   }
@@ -1947,6 +2025,9 @@ select{
   }
   .sm\:hidden{
     display: none;
+  }
+  .sm\:h-20{
+    height: 5rem;
   }
   .sm\:max-w-md{
     max-width: 28rem;
@@ -1997,6 +2078,12 @@ select{
   }
   .sm\:pt-0{
     padding-top: 0px;
+  }
+  .sm\:text-left{
+    text-align: left;
+  }
+  .sm\:text-right{
+    text-align: right;
   }
   .sm\:text-xl{
     font-size: 1.25rem;
@@ -2074,6 +2161,12 @@ select{
   }
   .md\:justify-center{
     justify-content: center;
+  }
+  .md\:border-t-0{
+    border-top-width: 0px;
+  }
+  .md\:border-l{
+    border-left-width: 1px;
   }
   .md\:p-8{
     padding: 2rem;
