--- a/resources/views/invoice/invoice.css
+++ b/resources/views/invoice/invoice.css
@@ -117,6 +117,15 @@ img {
     height: 2.5rem;
 }
 
+.h-12 {
+    height: 3rem;
+}
+
+.ml-1
+{
+    margin-left: 0.25rem;
+}
+
 .text-lg {
     font-size: 1.225rem;
     line-height: 1.75rem;
