--- a/resources/views/invoice/invoice.css
+++ b/resources/views/invoice/invoice.css
@@ -156,6 +156,22 @@ img {
     margin-top: 0.75rem;
 }
 
+.mt-4 {
+    margin-top: 1rem;
+}
+
+.mt-5 {
+    margin-top: 1.25rem;
+}
+
+.mt-6 {
+    margin-top: 1.5rem;
+}
+
+.mt-8 {
+    margin-top: 2rem;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -196,8 +212,20 @@ img {
     margin-top: 2.5rem;
 }
 
+.mt-12 {
+    margin-top: 3rem;
+}
+
+.mt-16 {
+    margin-top: 4rem;
+}
+
 .relative {
     position: relative;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .overflow-x-auto {
@@ -206,6 +234,14 @@ img {
 
 .text-left {
     text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.r-2 {
+    right: 2.5rem;
 }
 
 .px-6 {
