--- a/public/css/app.css
+++ b/public/css/app.css
@@ -689,35 +689,11 @@ select{
 .-ml-px{
   margin-left: -1px;
 }
-.ml-1{
-  margin-left: 0.25rem;
+.ml-auto{
+  margin-left: auto;
 }
 .mt-2{
   margin-top: 0.5rem;
-}
-.mr-2{
-  margin-right: 0.5rem;
-}
-.ml-2{
-  margin-left: 0.5rem;
-}
-.mt-4{
-  margin-top: 1rem;
-}
-.ml-4{
-  margin-left: 1rem;
-}
-.mt-8{
-  margin-top: 2rem;
-}
-.ml-12{
-  margin-left: 3rem;
-}
-.-mt-px{
-  margin-top: -1px;
-}
-.ml-auto{
-  margin-left: auto;
 }
 .mt-1{
   margin-top: 0.25rem;
@@ -728,11 +704,35 @@ select{
 .mt-10{
   margin-top: 2.5rem;
 }
+.mt-8{
+  margin-top: 2rem;
+}
 .mr-auto{
   margin-right: auto;
 }
 .mb-2{
   margin-bottom: 0.5rem;
+}
+.ml-4{
+  margin-left: 1rem;
+}
+.ml-1{
+  margin-left: 0.25rem;
+}
+.mr-2{
+  margin-right: 0.5rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
+}
+.mt-4{
+  margin-top: 1rem;
+}
+.ml-12{
+  margin-left: 3rem;
+}
+.-mt-px{
+  margin-top: -1px;
 }
 .-mt-16{
   margin-top: -4rem;
@@ -833,14 +833,14 @@ select{
 .h-5{
   height: 1.25rem;
 }
+.h-12{
+  height: 3rem;
+}
 .h-8{
   height: 2rem;
 }
 .h-16{
   height: 4rem;
-}
-.h-12{
-  height: 3rem;
 }
 .h-20{
   height: 5rem;
@@ -875,12 +875,6 @@ select{
 .w-5{
   width: 1.25rem;
 }
-.w-8{
-  width: 2rem;
-}
-.w-auto{
-  width: auto;
-}
 .w-2\/3{
   width: 66.666667%;
 }
@@ -889,6 +883,12 @@ select{
 }
 .w-1\/3{
   width: 33.333333%;
+}
+.w-auto{
+  width: auto;
+}
+.w-8{
+  width: 2rem;
 }
 .w-20{
   width: 5rem;
@@ -1148,14 +1148,14 @@ select{
 .border-0{
   border-width: 0px;
 }
+.border-b{
+  border-bottom-width: 1px;
+}
 .border-t{
   border-top-width: 1px;
 }
 .border-r{
   border-right-width: 1px;
-}
-.border-b{
-  border-bottom-width: 1px;
 }
 .border-b-2{
   border-bottom-width: 2px;
@@ -1203,13 +1203,13 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-gray-200{
   --tw-bg-opacity: 1;
@@ -1258,11 +1258,11 @@ select{
   -o-object-fit: cover;
      object-fit: cover;
 }
-.p-6{
-  padding: 1.5rem;
-}
 .p-10{
   padding: 2.5rem;
+}
+.p-6{
+  padding: 1.5rem;
 }
 .p-5{
   padding: 1.25rem;
@@ -1276,6 +1276,9 @@ select{
 .p-0{
   padding: 0px;
 }
+.p-2\.5{
+  padding: 0.625rem;
+}
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1288,13 +1291,13 @@ select{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .py-3{
   padding-top: 0.75rem;
@@ -1340,6 +1343,9 @@ select{
   padding-top: 1px;
   padding-bottom: 1px;
 }
+.pb-4{
+  padding-bottom: 1rem;
+}
 .pt-8{
   padding-top: 2rem;
 }
@@ -1375,9 +1381,6 @@ select{
 }
 .pt-6{
   padding-top: 1.5rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
 }
 .pl-0{
   padding-left: 0px;
@@ -1425,21 +1428,21 @@ select{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-xl{
-  font-size: 1.25rem;
+.text-lg{
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-base{
   font-size: 1rem;
@@ -1452,17 +1455,17 @@ select{
 .font-medium{
   font-weight: 500;
 }
-.font-semibold{
-  font-weight: 600;
-}
 .font-bold{
   font-weight: 700;
 }
-.font-light{
-  font-weight: 300;
+.font-semibold{
+  font-weight: 600;
 }
 .font-normal{
   font-weight: 400;
+}
+.font-light{
+  font-weight: 300;
 }
 .uppercase{
   text-transform: uppercase;
@@ -1502,21 +1505,9 @@ select{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
 .text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-gray-900{
   --tw-text-opacity: 1;
@@ -1525,6 +1516,18 @@ select{
 .text-green-500{
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
+}
+.text-gray-200{
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
@@ -1766,6 +1769,10 @@ select{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.focus\:border-blue-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
 .focus\:bg-indigo-700:focus{
   --tw-bg-opacity: 1;
   background-color: rgb(67 56 202 / var(--tw-bg-opacity));
@@ -1822,6 +1829,10 @@ select{
 .focus\:ring-indigo-500:focus{
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
+}
+.focus\:ring-blue-500:focus{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
 }
 .focus\:ring-opacity-50:focus{
   --tw-ring-opacity: 0.5;
@@ -1975,6 +1986,9 @@ select{
   }
   .md\:w-1\/2{
     width: 50%;
+  }
+  .md\:min-w-\[450px\]{
+    min-width: 450px;
   }
   .md\:min-w-\[390px\]{
     min-width: 390px;
