--- a/public/css/app.css
+++ b/public/css/app.css
@@ -600,6 +600,17 @@ select{
   border-color: transparent;
   background-color: currentColor;
 }
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .pointer-events-none{
   pointer-events: none;
 }
@@ -917,6 +928,9 @@ select{
 .w-16{
   width: 4rem;
 }
+.w-11{
+  width: 2.75rem;
+}
 .w-56{
   width: 14rem;
 }
@@ -1047,6 +1061,10 @@ select{
   -moz-column-gap: 1rem;
        column-gap: 1rem;
 }
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1104,9 +1122,6 @@ select{
 }
 .rounded-xl{
   border-radius: 0.75rem;
-}
-.rounded-sm{
-  border-radius: 0.125rem;
 }
 .rounded-none{
   border-radius: 0px;
@@ -1234,6 +1249,12 @@ select{
 .bg-indigo-600{
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+.bg-emerald-100\/60{
+  background-color: rgb(209 250 229 / 0.6);
+}
+.bg-red-100\/60{
+  background-color: rgb(254 226 226 / 0.6);
 }
 .bg-teal-200{
   --tw-bg-opacity: 1;
@@ -1569,9 +1590,9 @@ select{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
-.text-blue-600{
+.text-emerald-500{
   --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: rgb(16 185 129 / var(--tw-text-opacity));
 }
 .text-teal-900{
   --tw-text-opacity: 1;
@@ -1698,6 +1719,58 @@ select{
 }
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+.after\:absolute::after{
+  content: var(--tw-content);
+  position: absolute;
+}
+.after\:top-0\.5::after{
+  content: var(--tw-content);
+  top: 0.125rem;
+}
+.after\:left-\[2px\]::after{
+  content: var(--tw-content);
+  left: 2px;
+}
+.after\:top-0::after{
+  content: var(--tw-content);
+  top: 0px;
+}
+.after\:h-5::after{
+  content: var(--tw-content);
+  height: 1.25rem;
+}
+.after\:w-5::after{
+  content: var(--tw-content);
+  width: 1.25rem;
+}
+.after\:rounded-full::after{
+  content: var(--tw-content);
+  border-radius: 9999px;
+}
+.after\:border::after{
+  content: var(--tw-content);
+  border-width: 1px;
+}
+.after\:border-gray-300::after{
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.after\:bg-white::after{
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.after\:transition-all::after{
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+.after\:content-\[\'\'\]::after{
+  --tw-content: '';
+  content: var(--tw-content);
 }
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
@@ -1858,6 +1931,24 @@ select{
 .group:hover .group-hover\:ml-16{
   margin-left: 4rem;
 }
+.peer:checked ~ .peer-checked\:bg-blue-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.peer:checked ~ .peer-checked\:after\:translate-x-full::after{
+  content: var(--tw-content);
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.peer:checked ~ .peer-checked\:after\:border-white::after{
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+.peer:focus ~ .peer-focus\:ring-blue-300{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
+}
 @media (prefers-color-scheme: dark){
   .dark\:border-indigo-800{
     --tw-border-opacity: 1;
@@ -1866,6 +1957,10 @@ select{
   .dark\:bg-gray-900{
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  }
+  .peer:focus ~ .dark\:peer-focus\:ring-blue-800{
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
   }
 }
 @media (min-width: 640px){
@@ -1890,14 +1985,14 @@ select{
   .sm\:ml-16{
     margin-left: 4rem;
   }
-  .sm\:mb-4{
-    margin-bottom: 1rem;
-  }
   .sm\:mb-0{
     margin-bottom: 0px;
   }
   .sm\:mr-3{
     margin-right: 0.75rem;
+  }
+  .sm\:mb-4{
+    margin-bottom: 1rem;
   }
   .sm\:block{
     display: block;
@@ -1975,6 +2070,9 @@ select{
   .md\:static{
     position: static;
   }
+  .md\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
   .md\:ml-16{
     margin-left: 4rem;
   }
@@ -2010,6 +2108,9 @@ select{
   }
   .lg\:col-span-4{
     grid-column: span 4 / span 4;
+  }
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
   }
   .lg\:-mx-8{
     margin-left: -2rem;
